force-app/main/default/objects/Product_Stock_Notification__c/Product_Stock_Notification__c.object-meta.xml
<CustomObject>
    <label>Product Stock Notification</label>
    <nameField>
        <displayFormat>PSN-{00000}</displayFormat>
        <label>Product Stock Notification#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Stock Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>