force-app/main/default/objects/Product_Stock_Notification__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Product_Stock_Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>